# 68610-grad-nlp

./: .gitignore  LICENSE  README.md  TODOS.md  package_shard_artifacts.sh  pyproject.toml  run_shard_ablation_batches.sh
.github/workflows/: tests.yml
conversation/: README.md  conversation.py  export_transcripts.py  seed.json  shards.json
datasets/: Manifest.md
decomposition/: README.md  __init__.py  ablation.py  align.py  anthropic_io.py  cli.py  cohort.py  datasets.py  deep-research-report.md  deterministic.py  llm_io.py  llm_schema.py  openai_io.py  pyproject.toml  schema.py  shard_planner.py
decomposition/prompts/: seg_v1.txt  seg_v1_atomic.txt
decomposition/tests/: test_ablation.py  test_align.py  test_anthropic_io.py  test_cli.py  test_cohort.py  test_datasets.py  test_deterministic.py  test_llm_io.py  test_openai_io.py  test_shard_planner.py  test_validation.py
docs/: CLAUDE.md  PLAN.md  TODO.md  multi-turn-elephant-framework-design.md
judging/: PLAN.md  README.md  TODO.md  __init__.py  __main__.py  aggregate.py  analysis.py  batch_runner.py  calibrate.py  cli.py  io.py  judge.py  moral.py  prompts.py  pyproject.toml  runner.py  schemas.py  utils.py  verdict.py
judging/tests/: test_aggregate.py  test_analysis.py  test_batch_runner.py  test_calibrate.py  test_cli.py  test_io.py  test_judge.py  test_moral.py  test_prompts.py  test_runner.py  test_schemas.py  test_verdict.py
paper/: .gitignore  paper.code-workspace
paper/figures/: system_diagram.tex
